Implement layout structure and footer component
- Created a new layout for the main application in `src/app/(main)/layout.tsx` and added a basic home page in `src/app/(main)/page.tsx`.
- Introduced a `Footer` component in `src/components/shared/footer.tsx` with social media links and quick navigation.
- Added a `Navbar` component in `src/components/shared/navbar.tsx` for site navigation.
- Updated `layout.tsx` to include the new `Navbar` and `Footer`, and adjusted the main content area styling.
- Removed the old `page.tsx` file from `src/app` as part of the restructuring.
- Added a `Container` component for consistent layout styling in `src/components/ui/container.tsx`.
- Introduced a configuration file in `src/lib/config.ts` for site-wide settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "tailwindCSS.classFunctions": ["cva", "cx"]
+  "tailwindCSS.classFunctions": ["cva", "cx"],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
